--- a/home/home.html
+++ b/home/home.html
@@ -27,7 +27,9 @@
 
             <main id="main"></main>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, adipisci!</p>
+            <span>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis temporibus odio quisquam debitis ad culpa inventore, earum tempore error incidunt ex velit cum placeat, labore dicta corporis architecto dolorum tempora!
+            </span>
 
             <script src="home.js"></script>
 
