--- a/home/home.html
+++ b/home/home.html
@@ -27,9 +27,7 @@
 
             <main id="main"></main>
 
-            <span>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis temporibus odio quisquam debitis ad culpa inventore, earum tempore error incidunt ex velit cum placeat, labore dicta corporis architecto dolorum tempora!
-            </span>
+         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consectetur quidem nesciunt, quisquam ab ducimus ex suscipit, a optio placeat natus sint. Quaerat, delectus tenetur porro aliquam maiores iste nobis?</div>
 
             <script src="home.js"></script>
 
