--- a/home/home.html
+++ b/home/home.html
@@ -25,7 +25,11 @@
     </div>
             </header>
 
-            <main id="main"></main>
+            <main id="main">
+
+                <h1>main started</h1>
+
+            </main>
 
 
 
