--- a/home/home.html
+++ b/home/home.html
@@ -29,6 +29,8 @@
 
                 <h1>main started</h1>
 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit temporibus aspernatur repudiandae possimus nemo ratione perferendis illo quia officia placeat.</p>
+
             </main>
 
 
